--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>🍦JS Image Search</title>
+  <title>JS Image Search</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-  <h1>🍦JS Image Search</h1>
+  <h1>JS Image Search</h1>
   <form>
     <label for="searchTerm">Search Term</label>
     <input class="u-full-width" type="text" id="searchTerm" name="searchTerm">
